[package]
name = "itso-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "time"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
# dotenv = "0.15.0"
anyhow = "1.0.75"
shuttle-runtime = "0.28.0"
shuttle-secrets = "0.28.0"
shuttle-axum = "0.28.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json"] }

[profile.release]
lto = true
